--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<HTML lang="en">
 <head>
-    <title>Error</title>
-    <!--    <link rel="stylesheet" href="/stylesheets/style.css">-->
+    <title> Homepage </title>
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Not Found</h1>
+<%- include('navbar') %>
+<h1>Oopsy...I'm a Teapot!</h1>
 </body>
 </html>
