--- a/src/views/navbar.ejs
+++ b/src/views/navbar.ejs
@@ -1,11 +1,14 @@
-<nav class="navbar">
-    <ul class="navbar-blocks">
-        <% for (var i = 0; i < links.length; i++) { %>
-            <li class="nav-icon">
-                <a href="<%= links[i].href %>" class="nav-link">
-                    <span class="link-text"><%= links[i].text %></span>
-                </a>
-            </li>
-        <% } %>
-    </ul>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" href="#">About</a>
+            </div>
+        </div>
+    </div>
 </nav>
