--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,12 +2,15 @@
 <HTML lang="en">
 <head>
     <title> Homepage </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
 <%- include('navbar') %>
-<h1>Welcome!</h1>
-<button id="welcomeBtn">Click Me!</button>
+<div class="container-fluid">
+    <h1>Welcome!</h1>
+    <button id="welcomeBtn">Click Me!</button>
+</div>
 
 <script src="jquery/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
