--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML>
 <HTML lang="en">
 <head>
-    <title> Homepage </title>
+    <title> 404 </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
 <%- include('navbar') %>
-<h1>Oopsy...I'm a Teapot!</h1>
+<div class="container-fluid">
+    <h1>Oopsy...I'm a Teapot!</h1>
+</div>
 </body>
 </html>
